Fixed toolbar icon color reset for dark mode
no refs.

- Some really old legacy CSS in Admin used a generic class that overwrote the default Tailwind styles for the toolbar icons. This resulted in dark icons on top of a dark background.

--- a/koenig/koenig-lexical/src/styles/components/koenig-lexical.css
+++ b/koenig/koenig-lexical/src/styles/components/koenig-lexical.css
@@ -131,6 +131,12 @@ em-emoji-picker {
     fill: var(--grey-700);
 }
 
+/* Toolbar */
+[data-kg-floating-toolbar=true] .fill-white g, 
+[data-kg-floating-toolbar=true] .fill-white path {
+    fill: #fff;
+}
+
 /* tailwind `hidden` class conflicts with ghost styles */
 .kg-cardmenu-card-hover button {
     display: none;
